# bachelors_thesis

./: diary.md  my_notes.md  notes.md  pyproject.toml  todo.md
rag_project/: .gitignore  .temp-deepeval-cache.json  README.md  mkdocs.yml  processed_chunks.txt  pyproject.toml  requirements.txt  result_output.txt  run_pipeline.py  temp_test_run_data.json
rag_project/docs/: index.md
rag_project/docs/api/: common.md  evaluation.md  ingestion.md  iterations.md  processing.md  proof_of_concept.md  rag_pipeline.md  testing.md
rag_project/evaluation/: evaluation_factory.py  report_generation.py
rag_project/proof_of_concept/: proof_of_concept.py
rag_project/proof_of_concept/testing/: conftest.py  test_data.py  test_rag.py
rag_project/rag/: proof_of_concept.py
rag_project/rag/testing/: conftest.py  test_data.py  test_rag.py
rag_project/site/: 404.html  index.html  objects.inv
rag_project/site/api/rag_pipeline/: index.html
rag_project/site/api/testing/: index.html
rag_project/site/search/: search_index.json
rag_project/src/: __init__.py
rag_project/src/common/: __init__.py  config.py  models.py  nltk_setup.py  utils.py
rag_project/src/data/cache/vectorstore/: chroma.sqlite3
rag_project/src/evaluation/: __init__.py  evaluation_factory.py  json_storing.py  metrics.py  report_generation.py
rag_project/src/ingestion/: __init__.py  base.py  confluence.py  pdf.py
rag_project/src/iterations/: __init__.py
rag_project/src/iterations/iter_0/: __init__.py  pipeline.py
rag_project/src/iterations/iter_1/: __init__.py  pipeline.py
rag_project/src/iterations/iter_1/processing/: processor_iter_1.py
rag_project/src/iterations/iter_2/: pipeline.py
rag_project/src/iterations/iter_2/processing/: processor_iter_2.py
rag_project/src/iterations/iter_3/: pipeline.py
rag_project/src/iterations/iter_3/processing/: processor_iter_3.py
rag_project/src/iterations/iter_4/: pipeline.py
rag_project/src/iterations/iter_4/processing/: processor_iter_4.py
rag_project/src/iterations/iter_5/: pipeline.py
rag_project/src/iterations/iter_6/: pipeline.py
rag_project/src/iterations/iter_7/: pipeline.py
rag_project/src/iterations/iter_8/: pipeline.py
rag_project/src/iterations/iter_9/: pipeline.py
rag_project/src/processing/: __init__.py  processor.py
rag_project/src/rag_pipeline/: __init__.py  pipeline.py  vector_store.py
rag_project/src/testing/: __init__.py  all_test_data.py  conftest.py  run_pipeline.py  test_data.py  test_rag.py
(+40 files in other folders)
