[tool.poetry]
name = "rag-project"
version = "0.1.0"
description = "Source code for bachelor thesis by Martin Lejko"
authors = ["Martin Lejko <Martin.lejko@outlook.com>"]
readme = "README.md"
packages = [
    { include = "proof_of_concept" },
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.6"
langchain-text-splitters = "^0.3.7"
langchain-ollama = "^0.3.0"
langchain-chroma = "^0.2.2"
pypdf = "^5.4.0"
langchain-community = "^0.3.20"
deepeval = "^2.5.5"
pytest = "^8.1.1"
nltk = "^3.9.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
mkdocs = "^1.6.1"
mkdocstrings = "^0.29.0"
mkdocstrings-python = "^1.16.7"
mkdocs-material = "^9.6.9"
poethepoet = "^0.33.1"

[tool.poetry.scripts]
docs-serve = "mkdocs:serve"
docs-build = "mkdocs:build"
nltk-setup = "src.common.nltk_setup:main"

[tool.poe.tasks]
test-iterations = "pytest src/testing/ --log-file=debug/pytest.log --log-file-level=INFO"
test-proof = "pytest proof_of_concept/ --log-file=debug/pytest-proof.log --log-file-level=INFO"
run-pipeline = "python src/testing/run_pipeline.py"
run-proof = "python proof_of_concept/proof_of_concept.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]